src/objects/Questions_CR__c.object
<CustomObject>
    <description>Questions utilisés pour les questionnaires VA/VAP.</description>
    <fields>
        <fullName>Changement_macro_profil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changement macro profil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compte_rendu__c</fullName>
        <label>Nom du compte rendu</label>
        <referenceTo>Compte_rendu__c</referenceTo>
        <relationshipName>Questionnaires_VA_VAP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Facultatif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facultatif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cette case indique s&apos;il y a une question de follow-up sur la question original</description>
        <label>Dépendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numero_Question_Parent__c</fullName>
        <label>Numéro de la question parente</label>
        <length>81</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligatoire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obligatoire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options_de_reponses__c</fullName>
        <label>Options de réponses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordre_d_affichage__c</fullName>
        <label>Ordre d&apos;affichage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reponse_FollowUp__c</fullName>
        <label>Réponse déclencheur</label>
        <length>81</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Question_Order__c</fullName>
        <formula>VALUE( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_de_reponse__c</fullName>
        <label>Type de réponse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aucun</fullName>
                </value>
                <value>
                    <fullName>Choix</fullName>
                </value>
                <value>
                    <fullName>Multi-choix</fullName>
                </value>
                <value>
                    <fullName>Texte</fullName>
                </value>
                <value>
                    <fullName>Titre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Questions CR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Numéro de question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions CR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Options_de_reponses</fullName>
        <active>true</active>
        <description>Si la valeur du champ &quot;Type de réponses&quot; est &quot;Choix ou &quot;Multi-choix&quot;, alors il faut renseigner les valeurs de réponses dans le champ &quot;Options de réponses&quot;.</description>
        <errorConditionFormula>AND (  OR (ISPICKVAL(Type_de_reponse__c , &quot;Choix&quot;),  ISPICKVAL(Type_de_reponse__c , &quot;Multi-choix&quot;)), 
 ISBLANK( Options_de_reponses__c )
)</errorConditionFormula>
        <errorDisplayField>Options_de_reponses__c</errorDisplayField>
        <errorMessage>Veuillez renseigner la valeur des réponses possibles pour la question.</errorMessage>
    </validationRules>
</CustomObject>